--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^5.2.5",
     "@mui/material": "^5.2.8",
     "@mui/styles": "^5.4.2",
+    "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -23,9 +24,12 @@
     "react-flip-toolkit": "^7.0.13",
     "react-helmet-async": "^1.2.3",
     "react-icons": "^4.3.1",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "5.0.0",
     "react-tooltip": "^4.2.21",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "swiper": "^8.0.6",
     "uuidv4": "^6.2.12",
     "web-vitals": "^2.1.2"
