--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.5",
+    "@mui/lab": "^5.0.0-alpha.74",
     "@mui/material": "^5.2.8",
     "@mui/styles": "^5.4.2",
     "@reduxjs/toolkit": "^1.8.0",
@@ -14,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.3",
+    "date-fns": "^2.28.0",
     "dayjs": "^1.10.4",
     "generate-avatar": "^1.4.10",
     "http-proxy-middleware": "^2.0.3",
