--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.8.0",
+    "chartjs-plugin-deferred": "^2.0.0",
     "date-fns": "^2.28.0",
     "dayjs": "^1.10.4",
     "generate-avatar": "^1.4.10",
@@ -24,6 +26,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.2",
     "react-calendar": "^3.5.0",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "^17.0.2",
     "react-flip-toolkit": "^7.0.13",
     "react-helmet-async": "^1.2.3",
