--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.21.4",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.8.0",
+    "chartjs-plugin-datalabels": "^2.0.0",
     "chartjs-plugin-deferred": "^2.0.0",
     "date-fns": "^2.28.0",
     "dayjs": "^1.10.4",
