--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^28.1.1",
+    "@types/node": "^17.0.40",
+    "@types/react": "^18.0.11",
+    "@types/react-bootstrap": "^0.32.30",
+    "@types/react-dom": "^18.0.5",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.8.0",
@@ -39,6 +45,7 @@
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "swiper": "^8.0.6",
+    "typescript": "^4.7.3",
     "uuidv4": "^6.2.12",
     "web-vitals": "^2.1.2"
   },
