--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.0.11",
     "@types/react-bootstrap": "^0.32.30",
     "@types/react-dom": "^18.0.5",
+    "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^0.21.4",
     "bootstrap": "^5.1.3",
